# voice-to-fhir

./: .env.example  .gitignore  BENCHMARKS-CLINICAL-REVIEW.md  BENCHMARKS.md  DEPLOYMENT.md  Dockerfile  GROUND_TRUTH_ENHANCEMENT_SUMMARY.md  LICENSE  METHODOLOGY_REVIEW_BRIEF.md  ML_BENCHMARKING_FOR_SOFTWARE_ENGINEERS.md  README.md  STAGE1_IMPLEMENTATION_SUMMARY.md  STAGE1_INVESTIGATION_REPORT.md  STAGE_COMPARISON_GUIDE.md  SUBMISSION_READINESS_CHECKLIST.md  docker-compose.yml  enhancement_report.txt  pyproject.toml  requirements.txt
demo/: narration-clean.txt  narration-elevenlabs-phonetic.txt  narration-elevenlabs.txt  video-presentation-mp3.html  video-presentation.html
docs/: ANNOTATION_GUIDELINES.md  BENCHMARK_REMEDIATION_PLAN.md  CHALLENGE_SUBMISSION_NARRATIVE.md  CLINICAL_VALIDATION_REQUEST.md  IMPACT_ANALYSIS.md  KAGGLE_SUBMISSION.md  PRODUCTION_DEPLOYMENT_PLAN.md  SUBMISSION_WRITEUP.md  VIDEO_TRANSCRIPT.md
feedback/: ACTION_PLAN.md  BENCHMARK_VALIDITY_CRITICAL_ANALYSIS.md  CHALLENGE_SUMMARY.md  DOCUMENTATION_INDEX.md  FILE_MANIFEST.md  FINAL_EVALUATION_REPORT.md  MEDGEMMA_CHALLENGE_EVALUATION.md  QUICK_REFERENCE.md  SUBMISSION_STRATEGY.md  VISUAL_SUMMARY.md
scripts/: baseline_extractor.py  benchmark.py  benchmark_pristine.py  benchmark_stage_comparison.py  benchmark_v2.py  benchmark_v2_with_baseline.py  enhance_expected_files.py  regenerate_bulk_export.py  validate_accuracy.py
src/: README.md
src/api/: __init__.py  main.py
src/export/: __init__.py  cda.py  fhir_r4.py  hl7v2.py
src/extraction/: __init__.py  ebm_lookup.py  extraction_types.py  hcc_lookup.py  icd10_lookup.py  loinc_lookup.py  medgemma_client.py  ops_lookup.py  order_diagnosis_linker.py  post_processor.py  rxnorm_lookup.py
src/extraction/prompts/: __init__.py  (+18 more)
src/fhir/: __init__.py  transformer.py
tests/fixtures/: bulk-export-new.json  bulk-export.json  github.code-workspace  ground-truth.json
(+18 files in other folders)
